packages/rust-optimizer/core/src/snapshots/qwik_core__test__example_issue_33443.snap
---
source: packages/rust-optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useSignal } from '@qwik.dev/core';

export const Issue3742 = component$(({description = '', other}: any) => {
	const counter = useSignal(0);
	return (
		<div
		title={(description && 'description' in other) ? `Hello ${counter.value}` : `Bye ${counter.value}`}
		>
		Issue3742
		<button onClick$={() => counter.value++}>
			Increment
		</button>
		</div>
	)
	});
	
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from '@qwik.dev/core';
//
const _hf0 = (p0, p1)=>(p0.description ?? '') && 'description' in p0.other ? `Hello ${p1.value}` : `Bye ${p1.value}`;
const _hf0_str = '(p0.description??"")&&"description"in p0.other?`Hello ${p1.value}`:`Bye ${p1.value}`';
//
const q_Issue3742_component_div_button_q_e_click_95Hlm8WgsYY = /*#__PURE__*/ _noopQrl("Issue3742_component_div_button_q_e_click_95Hlm8WgsYY").m();
const q_Issue3742_component_svSy0PlWTAw = /*#__PURE__*/ _noopQrl("Issue3742_component_svSy0PlWTAw");
//
const Issue3742_component_div_button_q_e_click_95Hlm8WgsYY = (_, _1, counter)=>counter.value++;
q_Issue3742_component_div_button_q_e_click_95Hlm8WgsYY.s(Issue3742_component_div_button_q_e_click_95Hlm8WgsYY);
const Issue3742_component_svSy0PlWTAw = (_rawProps)=>{
    const counter = useSignal(0);
    return /*#__PURE__*/ _jsxSorted("div", {
        title: _fnSignal(_hf0, [
            _rawProps,
            counter
        ], _hf0_str)
    }, null, [
        "Issue3742",
        /*#__PURE__*/ _jsxSorted("button", {
            "q:p": counter
        }, {
            "q-e:click": q_Issue3742_component_div_button_q_e_click_95Hlm8WgsYY
        }, "Increment", 7, null)
    ], 1, "u6_0");
};
q_Issue3742_component_svSy0PlWTAw.s(Issue3742_component_svSy0PlWTAw);
export const Issue3742 = /*#__PURE__*/ componentQrl(q_Issue3742_component_svSy0PlWTAw);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;AACA,SAAqB,SAAS,QAAQ,iBAAiB;;uBAM9C,AAAC,IAJ4B,eAAc,OAI3B,oBAJ+B,QAIL,CAAC,MAAM,EAAE,GAAQ,KAAK,EAAE,GAAG,CAAC,IAAI,EAAE,GAAQ,KAAK,EAAE;;;;;;6DAGhF,kBAAM,QAAQ,KAAK;;wCAPH;IACnC,MAAM,UAAU,UAAU;IAC1B,qBACC,WAAC;QACD,KAAK;;;;;QACJ;sBAED,WAAC;;;YAAO,WAAQ;WAAyB;;AAK1C;;AAZD,OAAO,MAAM,0BAAY,gDAYrB\"}")
== DIAGNOSTICS ==

[]
