packages/rust-optimizer/core/src/snapshots/qwik_core__test__example_issue_4438.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 2839
expression: output
---
==INPUT==


import { component$, useSignal } from '@qwik.dev/core';

export const App = component$(() => {
	const toggle = useSignal(false);
	return (
		<>
			<div data-nu={toggle.value ? $localize`singular` : 'plural'}></div>
			<div>{toggle.value ? $localize`singular` : $localize`plural`}</div>
		</>
	);
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useSignal } from '@qwik.dev/core';
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ _noopQrl("App_component_ckEPmXZlub0");
//
const App_component_ckEPmXZlub0 = ()=>{
    const toggle = useSignal(false);
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("div", {
            "data-nu": toggle.value ? $localize`singular` : 'plural'
        }, null, null, 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, toggle.value ? $localize`singular` : $localize`plural`, 1, null)
    ], 1, "u6_0");
};
q_App_component_ckEPmXZlub0.s(App_component_ckEPmXZlub0);
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;AACA,SAAqB,SAAS,QAAQ,iBAAiB;;;;kCAEzB;IAC7B,MAAM,SAAS,UAAU;IACzB,qBACC;sBACC,WAAC;YAAI,WAAS,OAAO,KAAK,GAAG,SAAS,CAAC,QAAQ,CAAC,GAAG;;sBACnD,WAAC,mBAAK,OAAO,KAAK,GAAG,SAAS,CAAC,QAAQ,CAAC,GAAG,SAAS,CAAC,MAAM,CAAC;;AAG/D;;AARA,OAAO,MAAM,oBAAM,0CAQhB\"}")
== DIAGNOSTICS ==

[]
