packages/rust-optimizer/core/src/snapshots/qwik_core__test__example_jsx_import_source.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 1434
expression: output
---
==INPUT==


/* @jsxImportSource react */

import { qwikify$ } from './qwikfy';

export const App = () => (
	<div onClick$={()=>console.log('App')}></div>
);

export const App2 = qwikify$(() => (
	<div onClick$={()=>console.log('App2')}></div>
));

============================= test.js ==

/* @jsxImportSource react */ import { qwikifyQrl } from "./qwikfy";
import { qrl } from "@qwik.dev/core";
import { jsx as _jsx } from "react/jsx-runtime";
//
const q_App2_qwikify_RKJW7oCMdS4 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App2_qwikify_RKJW7oCMdS4.js"), "App2_qwikify_RKJW7oCMdS4");
//
export const App = ()=>/*#__PURE__*/ _jsx("div", {
        onClick$: ()=>console.log('App')
    });
export const App2 = qwikifyQrl(q_App2_qwikify_RKJW7oCMdS4);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"AACA,0BAA0B;;;;;;AAI1B,OAAO,MAAM,MAAM,kBAClB,KAAC;QAAI,UAAU,IAAI,QAAQ,GAAG,CAAC;OAC9B;AAEF,OAAO,MAAM,OAAO,uCAEjB\"}")
============================= test.tsx_App2_qwikify_RKJW7oCMdS4.js (ENTRY POINT)==

import { jsx as _jsx } from "react/jsx-runtime";
//
export const App2_qwikify_RKJW7oCMdS4 = ()=>/*#__PURE__*/ _jsx("div", {
        onClick$: ()=>console.log('App2')
    });


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;wCAS6B,kBAC5B,KAAC;QAAI,UAAU,IAAI,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App2_qwikify_RKJW7oCMdS4",
  "entry": null,
  "displayName": "test.tsx_App2_qwikify",
  "hash": "RKJW7oCMdS4",
  "canonicalFilename": "test.tsx_App2_qwikify_RKJW7oCMdS4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "qwikify$",
  "captures": false,
  "loc": [
    177,
    234
  ]
}
*/
== DIAGNOSTICS ==

[]
