packages/rust-optimizer/core/src/snapshots/qwik_core__test__example_lib_mode.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 6606
expression: output
---
==INPUT==


import { $, component$, server$, useStyle$, useTask$, useSignal } from '@qwik.dev/core';

export const Works = component$((props) => {
	useStyle$(STYLES);
	const text = 'hola';
	const sig = useSignal('hola');
	useTask$(() => {
		console.log(sig.value, text);
	});
	return (
		<div onClick$={server$(() => console.log('in server', sig.value, text))}></div>
	);
});

const STYLES = '.class {}';

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { useStyleQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
import { _captures } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { jsx as _jsx } from "@qwik.dev/core/jsx-runtime";
import { component$, server$, useStyle$, useTask$, useSignal } from '@qwik.dev/core';
//
const STYLES = '.class {}';
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
    useStyleQrl(/*#__PURE__*/ inlinedQrl(STYLES, "Works_component_useStyle_i40UL9JyQpg"));
    const sig = useSignal('hola');
    useTaskQrl(/*#__PURE__*/ inlinedQrl(()=>{
        const sig = _captures[0];
        console.log(sig.value, 'hola');
    }, "Works_component_useTask_pjo5U5Ikll0", [
        sig
    ]));
    return /*#__PURE__*/ _jsxSorted("div", {
        "q-e:click": serverQrl(/*#__PURE__*/ inlinedQrl(()=>{
            const sig = _captures[0];
            return console.log('in server', sig.value, 'hola');
        }, "Works_component_div_q_e_click_server_q39lOt7xGrI", [
            sig
        ]))
    }, null, null, 2, "u6_0");
}, "Works_component_t45qL4vNGv0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;AACA,SAAY,UAAU,EAAE,OAAO,EAAE,SAAS,EAAE,QAAQ,EAAE,SAAS,QAAQ,iBAAiB;;AAcxF,MAAM,SAAS;AAZf,OAAO,MAAM,sBAAQ,sCAAW,CAAC;IAChC,qCAAU;IAEV,MAAM,MAAM,UAAU;IACtB,oCAAS;;QACR,QAAQ,GAAG,CAAC,IAAI,KAAK,EAHT;;;;IAKb,qBACC,WAAC;QAAI,aAAU,mCAAQ;;mBAAM,QAAQ,GAAG,CAAC,aAAa,IAAI,KAAK,EANnD;;;;;AAQd,mCAAG\"}")
== DIAGNOSTICS ==

[]
