packages/rust-optimizer/core/src/snapshots/qwik_core__test__example_lightweight_functional.snap
---
source: packages/rust-optimizer/core/src/test.rs
assertion_line: 937
expression: output
---
==INPUT==


import { $, component$ } from '@qwik.dev/core';

export const Foo = component$((props) => {
	return (
		<div>
			<Button {...props} />
			<ButtonArrow {...props} />
		</div>
	);
}, {
	tagName: "my-foo",
});

export function Button({text, color}) {
	return (
		<button onColor$={color} onClick$={()=>console.log(text, color)}>{text}</button>
	);
}

export const ButtonArrow = ({text, color}) => {
	return (
		<button onColor$={color} onClick$={()=>console.log(text, color)}>{text}</button>
	);
}

============================= test.tsx_Foo_component_HTDRsvUbLiE.tsx (ENTRY POINT)==

import { Button } from "./test";
import { ButtonArrow } from "./test";
//
export const Foo_component_HTDRsvUbLiE = (props)=>{
    return <div>
			<Button {...props}/>
			<ButtonArrow {...props}/>
		</div>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;yCAG8B,CAAC;IAC9B,QACE,IAAI;GACJ,CAAC,QAAQ,GAAG,KAAK,GAAI;GACrB,CAAC,aAAa,GAAG,KAAK,GAAI;EAC3B,EAAE;AAEJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    81,
    181
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx_Button_button_q_e_click_6YaNiKLqRnQ.tsx (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
//
export const Button_button_q_e_click_6YaNiKLqRnQ = ()=>{
    const color = _captures[0], text = _captures[1];
    return console.log(text, color);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;mDAgBqC;;WAAI,QAAQ,GAAG,CAAC,MAAM\"}")
/*
{
  "origin": "test.tsx",
  "name": "Button_button_q_e_click_6YaNiKLqRnQ",
  "entry": null,
  "displayName": "test.tsx_Button_button_q_e_click",
  "hash": "6YaNiKLqRnQ",
  "canonicalFilename": "test.tsx_Button_button_q_e_click_6YaNiKLqRnQ",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    297,
    325
  ],
  "captureNames": [
    "color",
    "text"
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_ButtonArrow_button_q_e_click_rEE0GCaea7M = /*#__PURE__*/ qrl(()=>import("./test.tsx_ButtonArrow_button_q_e_click_rEE0GCaea7M"), "ButtonArrow_button_q_e_click_rEE0GCaea7M");
const q_Button_button_q_e_click_6YaNiKLqRnQ = /*#__PURE__*/ qrl(()=>import("./test.tsx_Button_button_q_e_click_6YaNiKLqRnQ"), "Button_button_q_e_click_6YaNiKLqRnQ");
const q_Foo_component_HTDRsvUbLiE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_HTDRsvUbLiE"), "Foo_component_HTDRsvUbLiE");
//
export const Foo = /*#__PURE__*/ componentQrl(q_Foo_component_HTDRsvUbLiE, {
    tagName: "my-foo"
});
export function Button({ text, color }) {
    return <button q-e:color={color} q-e:click={q_Button_button_q_e_click_6YaNiKLqRnQ.w([
        color,
        text
    ])}>{text}</button>;
}
export const ButtonArrow = (_rawProps)=>{
    return <button q-e:color={_rawProps.color} q-e:click={q_ButtonArrow_button_q_e_click_rEE0GCaea7M.w([
        _rawProps
    ])}>{_rawProps.text}</button>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;AAGA,OAAO,MAAM,oBAAM,0CAOhB;IACF,SAAS;AACV,GAAG;AAEH,OAAO,SAAS,OAAO,EAAC,IAAI,EAAE,KAAK,EAAC;IACnC,QACE,OAAO,WAAU,OAAO;;;SAAyC,OAAO;AAE3E;AAEA,OAAO,MAAM,cAAc;IAC1B,QACE,OAAO,qBAFyB,OAER;;mBAFE,OAE8C;AAE3E,EAAC\"}")
============================= test.tsx_ButtonArrow_button_q_e_click_rEE0GCaea7M.tsx (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
//
export const ButtonArrow_button_q_e_click_rEE0GCaea7M = ()=>{
    const _rawProps = _captures[0];
    return console.log(_rawProps.text, _rawProps.color);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;wDAsBqC;;WAAI,QAAQ,GAAG,WAFvB,gBAAM\"}")
/*
{
  "origin": "test.tsx",
  "name": "ButtonArrow_button_q_e_click_rEE0GCaea7M",
  "entry": null,
  "displayName": "test.tsx_ButtonArrow_button_q_e_click",
  "hash": "rEE0GCaea7M",
  "canonicalFilename": "test.tsx_ButtonArrow_button_q_e_click_rEE0GCaea7M",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    445,
    473
  ],
  "captureNames": [
    "_rawProps"
  ]
}
*/
== DIAGNOSTICS ==

[]
